tests/baselines/reference/useObjectValuesAndEntries1.errors.txt
useObjectValuesAndEntries1.ts(10,31): error TS2769: No overload matches this call.
  Overload 1 of 2, '(o: { [s: string]: unknown; } | ArrayLike<unknown>): [string, unknown][]', gave the following error.
    Argument of type 'number' is not assignable to parameter of type '{ [s: string]: unknown; } | ArrayLike<unknown>'.
  Overload 2 of 2, '(o: {}): [string, any][]', gave the following error.
    Argument of type 'number' is not assignable to parameter of type '{}'.
useObjectValuesAndEntries1.ts(11,29): error TS2769: No overload matches this call.
  Overload 1 of 2, '(o: ArrayLike<unknown> | { [s: string]: unknown; }): unknown[]', gave the following error.
    Argument of type 'number' is not assignable to parameter of type 'ArrayLike<unknown> | { [s: string]: unknown; }'.
  Overload 2 of 2, '(o: {}): any[]', gave the following error.
    Argument of type 'number' is not assignable to parameter of type '{}'.


==== useObjectValuesAndEntries1.ts (2 errors) ====
    var o = { a: 1, b: 2 };
    
    for (var x of Object.values(o)) {
        let y = x;
    }
    
    var entries = Object.entries(o);                    // [string, number][]
    var values = Object.values(o);                      // number[]
    
    var entries1 = Object.entries(1);                   // [string, any][]
                                  ~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(o: { [s: string]: unknown; } | ArrayLike<unknown>): [string, unknown][]', gave the following error.
!!! error TS2769:     Argument of type 'number' is not assignable to parameter of type '{ [s: string]: unknown; } | ArrayLike<unknown>'.
!!! error TS2769:   Overload 2 of 2, '(o: {}): [string, any][]', gave the following error.
!!! error TS2769:     Argument of type 'number' is not assignable to parameter of type '{}'.
    var values1 = Object.values(1);                     // any[]
                                ~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(o: ArrayLike<unknown> | { [s: string]: unknown; }): unknown[]', gave the following error.
!!! error TS2769:     Argument of type 'number' is not assignable to parameter of type 'ArrayLike<unknown> | { [s: string]: unknown; }'.
!!! error TS2769:   Overload 2 of 2, '(o: {}): any[]', gave the following error.
!!! error TS2769:     Argument of type 'number' is not assignable to parameter of type '{}'.
    
    var entries2 = Object.entries({ a: true, b: 2 });   // [string, number|boolean][]
    var values2 = Object.values({ a: true, b: 2 });     // (number|boolean)[]
    
    var entries3 = Object.entries({});                  // [string, {}][]
    var values3 = Object.values({});                    // {}[]
    
    var a = ["a", "b", "c"];
    var entries4 = Object.entries(a);                   // [string, string][]
    var values4 = Object.values(a);                     // string[]
    
    enum E { A, B }
    var entries5 = Object.entries(E);                   // [string, any][]
    var values5 = Object.values(E);                     // any[]
    
    interface I { }
    var i: I = {};
    var entries6 = Object.entries(i);                   // [string, any][]
    var values6 = Object.values(i);                     // any[]